--- a/css/main.css
+++ b/css/main.css
@@ -347,6 +347,10 @@ body {
   margin-bottom: -2px;
 }
 
+.down #installs {
+  margin-bottom: -2px;
+}
+
 .down .downloads {
   font-size: 10px;
   opacity: 70%;
@@ -417,9 +421,14 @@ footer .col1 p {
   display: flex;
 }
 
+.main .left {
+  display: flex;
+}
+
 .main .left img {
-  width: 320px;
-  height: 320px;
+  justify-content: end;
+  align-items: flex-end;
+  width: 420px;
 }
 
 .main .right {
@@ -454,6 +463,129 @@ footer .col1 p {
   font-family: lato;
 }
 
+.gtco-testimonials {
+  position: relative;
+  margin-top: 130px;
+}
+
+hr.style1 {
+  width: 300px;
+  float: center;
+  border-top: 1px solid #8c8b8b;
+  margin-top: 0px;
+}
+
+@media (max-width: 767px) {
+  .gtco-testimonials {
+    margin-top: 20px;
+  }
+}
+
+.gtco-testimonials h2 {
+  font-size: 30px;
+  text-align: center;
+  color: #333333;
+  margin-bottom: 10px;
+}
+
+.gtco-testimonials .owl-stage-outer {
+  padding: 30px 0;
+}
+
+.gtco-testimonials .owl-nav {
+  display: none;
+}
+
+.gtco-testimonials .owl-dots {
+  text-align: center;
+}
+
+.gtco-testimonials .owl-dots span {
+  position: relative;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  display: block;
+  background: #fff;
+  border: 2px solid #01b0f8;
+  margin: 0 5px;
+}
+
+.gtco-testimonials .owl-dots .active {
+  box-shadow: none;
+}
+
+.gtco-testimonials .owl-dots .active span {
+  background: #01b0f8;
+  box-shadow: none;
+  height: 12px;
+  width: 12px;
+  margin-bottom: -1px;
+}
+
+.gtco-testimonials .card {
+  background: #FFF1F1;
+  box-shadow: 0 8px 30px -7px #c9dff0;
+  margin: 0 20px;
+  padding: 0 10px;
+  border-radius: 20px;
+  border: 0;
+}
+
+.gtco-testimonials .card .card-img-top {
+  max-width: 100px;
+  border-radius: 50%;
+  /*margin: 15px auto 0;*/
+  box-shadow: 0 8px 20px -4px #95abbb;
+  width: 100px;
+  height: 100px;
+}
+
+.gtco-testimonials .card h5 {
+  color: #01b0f8;
+  font-size: 21px;
+  line-height: 1.3;
+}
+
+.gtco-testimonials .card h5 span {
+  font-size: 18px;
+  color: #666666;
+}
+
+.gtco-testimonials .card p {
+  font-size: 25px;
+  color: #555;
+  padding-bottom: 0px;
+  margin-top: 60px;
+}
+
+.gtco-testimonials .active {
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+
+.gtco-testimonials .center {
+  opacity: 1;
+}
+
+.gtco-testimonials .center h5 {
+  font-size: 24px;
+}
+
+.gtco-testimonials .center h5 span {
+  font-size: 20px;
+}
+
+.gtco-testimonials .center .card-img-top {
+  max-width: 100%;
+  height: 120px;
+  width: 120px;
+}
+
+.owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot {
+  outline: 0;
+}
+
 .box-information {
   margin-top: 60px;
   display: flex;
@@ -472,6 +604,269 @@ footer .col1 p {
 }
 
 .box-information .card1 img {
+  width: 32px;
+  margin-top: 10px;
+}
+
+.box-information .card1 .answer {
+  opacity: 70%;
+  margin-top: -10px;
+  font-size: 12px;
+}
+
+.regtandle2 {
+  width: 100%;
+  height: 300px;
+  margin-top: 70px;
+  background-color: #FE4243;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  border-radius: 30px;
+  margin-bottom: 100px;
+}
+
+.regtandle2 .img-mobile {
+  width: 600px;
+  height: 100%;
+  position: absolute;
+  top: -150px;
+}
+
+.regtandle2 h2 {
+  position: absolute;
+  top: 190px;
+  color: #fff;
+  font-family: roboto;
+}
+
+.regtandle2 .searchbar-1 {
+  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+  width: 90%;
+  height: 80px;
+  background: #FFF;
+  border-radius: 20px;
+  position: absolute;
+  bottom: -40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.regtandle2 .searchbar-1 .left {
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
+  opacity: 70%;
+}
+
+.regtandle2 .searchbar-1 .left input {
+  margin-left: 10px;
+  border: 0 solid #fff;
+}
+
+.regtandle2 .searchbar-1 .left input:focus {
+  outline: none;
+}
+
+.regtandle2 .searchbar-1 .search-icon {
   width: 30px;
+  height: 30px;
+}
+
+.regtandle2 .row-1 {
+  display: flex;
+}
+
+.regtandle2 .right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 25px;
+  /*style the arrow inside the select element:*/
+  /*point the arrow upwards when the select box is open (active):*/
+  /*style the items (options), including the selected item:*/
+  /*style items (options):*/
+  /*hide the items when the select box is closed:*/
+}
+
+.regtandle2 .right .custom-select {
+  position: relative;
+  font-size: 16px;
+  width: 160px;
+  margin-right: 0;
+  border: none;
+}
+
+.regtandle2 .right .custom-select select {
+  display: none;
+}
+
+.regtandle2 .right .select-selected {
+  background-color: #fff;
+  position: absolute;
+  top: 0px;
+  left: 0;
+  right: 0;
+  width: 110%;
+  height: 35px;
+}
+
+.regtandle2 .right .select-selected:after {
+  position: absolute;
+  content: "";
+  top: 16px;
+  right: 40px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #000 transparent transparent transparent;
+}
+
+.regtandle2 .right .select-selected.select-arrow-active:after {
+  border-color: transparent transparent #000 transparent;
+  top: 4px;
+}
+
+.regtandle2 .right .select-items div, .regtandle2 .right .select-selected {
+  color: #000;
+  padding: 8px 16px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.regtandle2 .right .select-items {
+  position: absolute;
+  background-color: #FFC9C9;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+
+.regtandle2 .right .select-hide {
+  display: none;
+}
+
+.regtandle2 .right .select-items div:hover, .regtandle2 .right .same-as-selected {
+  background-color: rgba(255, 255, 255, 0.199);
+}
+
+.sec3 {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.sec3 .card-1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #FFF;
+  height: 180px;
+  width: 260px;
+  border: 0ch;
+  position: relative;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #BEBEBE;
+}
+
+.pag {
+  direction: rtl;
+  display: flex;
+  margin-top: 30px;
+  justify-content: center;
+  margin-bottom: 60px;
+}
+
+.pagination a {
+  border-radius: 30px;
+  text-align: center;
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+}
+
+/* Style the active/current link */
+.pagination a.active {
+  background-color: #FE4243;
+  color: white;
+  border-radius: 100%;
+}
+
+/* Add a grey background color on mouse-over */
+.pagination a:hover:not(.active) {
+  border-radius: 100%;
+  background-color: #F3EDE2;
+}
+
+.cahrt-sec {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 70px;
+  padding-right: 70px;
+}
+
+.chart {
+  margin-top: 100px;
+}
+
+.vert > canvas, .vert > ol {
+  display: inline-block;
+}
+
+.horiz > li {
+  display: inline;
+  padding-right: 20px;
+}
+
+.legend {
+  vertical-align: top;
+  padding-left: 15px;
+  list-style: none;
+}
+
+.key {
+  position: relative;
+}
+
+.key:before {
+  content: "";
+  position: absolute;
+  top: 35%;
+  left: -15px;
+  width: 10px;
+  height: 10px;
+}
+
+.one:before {
+  background: #ecd078;
+}
+
+.two:before {
+  background: rgba(217, 91, 67, 0.7);
+}
+
+.three:before {
+  background: rgba(192, 41, 66, 0.7);
+}
+
+.four:before {
+  background: rgba(84, 36, 55, 0.7);
+}
+
+.five:before {
+  background: rgba(83, 119, 122, 0.7);
+}
+
+.six:before {
+  background: rgba(119, 146, 174, 0.7);
 }
 /*# sourceMappingURL=main.css.map */
