--- a/scss/main.scss
+++ b/scss/main.scss
@@ -540,7 +540,7 @@ footer{
     box-shadow: 0 8px 30px -7px #c9dff0;
     margin: 0 20px;
     padding: 0 10px;
-    border-radius: 20px;
+    border-radius: 12px;
     border: 0;
   }
   .gtco-testimonials .card .card-img-top {
@@ -561,10 +561,10 @@ footer{
     color: #666666;
   }
   .gtco-testimonials .card p {
-    font-size: 25px;
+    font-size: 18px;
     color: #555;
     padding-bottom: 0px;
-    margin-top: 60px;
+    margin-top: 10px;
   }
   .gtco-testimonials .active {
     opacity: 0.5;
@@ -587,7 +587,25 @@ footer{
   .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot {
     outline: 0;
   }
-  
+
+  .up-2{
+      
+      display: flex;
+      justify-content: space-between;
+      
+  }
+  .down-2{
+    display: flex;
+    justify-content: space-between;
+   
+}
+.box-12{
+    display: flex;
+    justify-content: space-between;
+}
+  .right-matn{
+      width: 60%;
+  }
 .box-information{
     margin-top: 60px;
     display: flex;
@@ -861,3 +879,4 @@ display: none;
   .four:before{background:rgba(84, 36, 55, 0.7)}
   .five:before{background:rgba(83, 119, 122, 0.7)}
   .six:before{background:rgba(119, 146, 174, 0.7)}
+
