--- a/css/main.css
+++ b/css/main.css
@@ -270,6 +270,19 @@ body {
   justify-content: center;
 }
 
+.box-1 {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 300px 0 300px;
+}
+
+.box-1 .user {
+  background-color: #01b0f8;
+  margin: 10px;
+  width: 240px;
+  height: 140px;
+}
+
 .title-c2 {
   font-size: 20px;
 }
