--- a/css/main.css
+++ b/css/main.css
@@ -304,13 +304,13 @@ body {
   width: 40px;
 }
 
-.product-category .card-1, .product .card-1 {
+.card-1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #FFF1F1;
+  background-color: #fff1f1;
   height: 180px;
-  width: 240px;
+  width: 260px;
   border: 0ch;
   position: relative;
   border-radius: 15px;
@@ -318,6 +318,20 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0 10px 0 10px;
+}
+
+.card-1 a {
+  color: #111;
+  text-decoration: none;
+}
+
+.main--box {
+  background-color: #FE4243;
+  border-radius: 20px;
+  padding: 20px;
+  margin-top: 100px;
+  display: flex;
 }
 
 .but {
